# ROOTLess

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Compressor.hpp  CompressorBenchmark.cpp  CompressorBenchmark.hpp  SZ3Compressor.cpp  SZ3Compressor.hpp  TruncCompressor.cpp  TruncCompressor.hpp  benchmark.cpp
tests/: CMakeLists.txt  test-JSON.cpp  test-SZ3Compressor.cpp  test-SyntheticTTree.cpp  test-TTreeRead.cpp  test-TruncCompressor.cpp  test-cli.cpp  ttree-experiment.cpp
utils/: CMakeLists.txt  cli.cpp  cli.hpp  root.cpp  root.hpp  utils.cpp  utils.hpp
